@@ -56,7 +56,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  filename = Makefile.PL
  [Git::Commit]
  add_files_in = /
- allow_dirty_match = ^lib/
+ allow_dirty_match = ^(?:lib|script|bin)/
  allow_dirty = dist.ini
  allow_dirty = Changes
  allow_dirty = README.pod
@@ -67,7 +67,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  [BumpVersionAfterRelease]
  munge_makefile_pl = 0
  [Git::Commit / Commit_Version_Bump]
- allow_dirty_match = ^lib/
+ allow_dirty_match = ^(?:lib|script|bin)/
  commit_msg = Bump version
  [Git::Push]
  
